discussion/kv_engine/129701/129701_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Rename dispatcher to network interface manager

Get rid of the "dispatcher thread" object and move its content
to memcached.cc as "network interface manager". This is a step
on the way to move the code into a new files to handle all
of the network interface management.

Change-Id: Ie56c6a4d24712d2ab13588c1f46c85f778b8c072

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-03 10:31:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-03 11:11:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2508/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:140:9: error: no type named "char_buffer" in namespace "cb" [clang-diagnostic-error]
    cb::char_buffer getScratchBuffer() const {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:141:20: error: no member named "char_buffer" in namespace "cb" [clang-diagnostic-error]
        return cb::char_buffer{const_cast<char*>(scratch_buffer.data()),
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:142:53: error: expected ";" after expression [clang-diagnostic-error]
                               scratch_buffer.size()};
                                                    ^
                                                    ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2508/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:140:9:
error: no type named "char_buffer" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2508/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28332/ : FAILURE

Failure of GoogleTest "ShutdownTest.ShutdownAllowed":

<pre>
[ RUN      ] ShutdownTest.ShutdownAllowed
..\kv_engine\tests\testapp\testapp.cc(936): error: Expected equality of these values:
  0
  exit_code
    Which is: 3221225477
[  FAILED  ] ShutdownTest.ShutdownAllowed (579 ms)

</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28332/ )

Failure of a CTest test 289/387 Test #289: memcached_testapp.default.ShutdownTest ........................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28332/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2998/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0038/0045]: test CAS regeneration seqno del_with_meta lww...../kv_engine/engines/ep/tests/ep_testsuite_xdcr.cc:2804 Test failed: `" (Expected `1591181403890581504" to not equal `1591181403890581504" - CAS was not regenerated)
[2020-06-03T10:50:04.157Z] (43 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2998/ )

Failure of a CTest test [2020-06-03T10:50:04.156Z]  64/401 Test #273: ep_testsuite_xdcr.full_eviction.rocksdb ...........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2998/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3997/ : FAILURE

Failure of a CTest test [2020-06-03T10:59:35.184Z]  64/382 Test #359: memcached_testapp.ep.CleanOrUnclean/PersistToTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3997/ )

ThreadSanitizer issue: use of an invalid mutex (e.g. uninitialized or destroyed) (/home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/install/lib/libtsan.so.0+0x3876f) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3997/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3935/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11775/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3895/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
